--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,43 @@
 version: '3'
 services:
-  prisma_core:
+  apollo:
+    build:
+      context: ./apollo
+      dockerfile: Dockerfile
+    environment:
+      # NODE_ENV=production
+      # - PRISMA_ENDPOINT:'${PRISMA_ENDPOINT}'
+      PRISMA_ENDPOINT: 'http://prisma:${PRISMA_PORT}'
+      PRISMA_SECRET: '${PRISMA_SECRET}'
+    volumes:
+      - ./apollo/src:/app/src
+    ports:
+      - '${APOLLO_PORT:-8000}:${APOLLO_PORT:-8000}'
+    command: 'npm run development'
+  prisma:
     image: prismagraphql/prisma:1.34.10
     restart: always
     ports:
       - '${PRISMA_PORT:-4454}:${PRISMA_PORT:-4454}'
     environment:
       PRISMA_CONFIG: |
-        # managementApiSecret: ${PRISMA_MANAGEMENT_API_SECRET}
+        managementApiSecret: ${PRISMA_MANAGEMENT_API_SECRET}
         secret: ${PRISMA_SECRET}
         port: ${PRISMA_PORT:-4454}
         databases:
           default:
             connector: postgres
-            host: postgres_core
+            host: postgres
             port: 5432
             user: ${PG_USER}
             password: ${PG_PASSWORD}
             migrations: true
-  postgres_core:
+  postgres:
     image: postgres:10.3
     environment:
       POSTGRES_USER: ${PG_USER:-prisma}
       POSTGRES_PASSWORD: ${PG_PASSWORD:-prisma}
     volumes:
-      - postgres_core:/var/lib/postgresql-prisma/data
+      - postgres:/var/lib/postgresql-prisma/data
 volumes:
-  postgres_core: ~
+  postgres: ~
