--- a/package.json
+++ b/package.json
@@ -1,42 +1,21 @@
 {
-  "name": "quality-hub-core-be",
-  "version": "1.0.0",
-  "description": "🚫 Note: All lines that start with 🚫 are instructions and should be deleted before this is posted to your portfolio. This is intended to be a guideline. Feel free to add your own flare to it.",
-  "main": "index.js",
-  "scripts": {
-    "test": "jest --watch",
-    "server": "nodemon src/index.js",
-    "start": "node src/index.js",
-    "development": "env-cmd -f ./config/development.env nodemon src/index.js",
-    "save_seeded_users": "env-cmd -f ./config/development.env node prisma/seeds/02_save_seeded_users.js",
-    "seed_reviews": "env-cmd -f ./config/development.env node prisma/seeds/03_seed_reviews.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Lambda-School-Labs/quality-hub-core-be.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Lambda-School-Labs/quality-hub-core-be/issues"
-  },
-  "homepage": "https://github.com/Lambda-School-Labs/quality-hub-core-be#readme",
   "devDependencies": {
-    "jest": "^24.9.0",
-    "nodemon": "^1.19.4",
-    "supertest": "^4.0.2"
+    "babel-eslint": "^10.0.3",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.9.0",
+    "eslint-plugin-import": "^2.20.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.18.0",
+    "prettier": "^1.19.1",
+    "prisma": "^1.34.10"
   },
-  "dependencies": {
-    "@apollo/federation": "^0.10.2",
-    "apollo-server": "^2.9.7",
-    "bcryptjs": "^2.4.3",
-    "dotenv": "^8.2.0",
-    "env-cmd": "^10.0.1",
-    "express": "^4.17.1",
-    "graphql-yoga": "^1.18.3",
-    "jsonwebtoken": "^8.5.1",
-    "prisma-client-lib": "^1.34.10",
-    "stripe": "^7.14.0"
-  }
+  "scripts": {
+    "start": "docker-compose up --build",
+    "generate": "prisma generate",
+    "deploy": "prisma deploy",
+    "reseed": "prisma delete && prisma generate && prisma deploy"
+  },
+  "dependencies": {}
 }
