chore: adds PRISMA_SERVICE and PRISMA_STAGE envs, adds docker-compose for testing

--- a/docker-compose.test..yml
+++ b/docker-compose.test..yml
@@ -7,7 +7,7 @@ services:
     environment:
       # NODE_ENV=production
       # - PRISMA_ENDPOINT:'${PRISMA_ENDPOINT}'
-      PRISMA_ENDPOINT: '${PRISMA_ENDPOINT}/${RISMA_SERVICE_NAME}/${PRISMA_STAGE}'
+      PRISMA_ENDPOINT: '${PRISMA_ENDPOINT}/${RISMA_SERVICE_NAME}/test'
       PRISMA_SECRET: '${PRISMA_SECRET}'
       APOLLO_PORT: '${APOLLO_PORT}'
       JWT_SECRET: '${JWT_SECRET}'
