chore: adds Dockerfile.test and reference in compose test file

--- a/docker-compose.test..yml
+++ b/docker-compose.test..yml
@@ -3,7 +3,7 @@ services:
   apollo:
     build:
       context: ./apollo
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.test
     environment:
       # NODE_ENV=production
       # - PRISMA_ENDPOINT:'${PRISMA_ENDPOINT}'
