chore: updates env variables for dynamcally building prisma endpoint

--- a/prisma/prisma.yml
+++ b/prisma/prisma.yml
@@ -1,5 +1,5 @@
 # The HTTP endpoint for your Prisma API
-endpoint: ${env:PRISMA_ENDPOINT}
+endpoint: http://prisma:${env:PRISMA_PORT}/${env:PRISMA_SERVICE_NAME}/${env:PRISMA_STAGE}
 secret: ${env:PRISMA_SECRET}
 
 # Points to the file that contains your datamodel
