--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,10 @@ services:
     environment:
       # NODE_ENV=production
       # - PRISMA_ENDPOINT:'${PRISMA_ENDPOINT}'
-      PRISMA_ENDPOINT: '${PRISMA_ENDPOINT}/${RISMA_SERVICE_NAME}/${PRISMA_STAGE}'
+      PRISMA_ENDPOINT: '${PRISMA_ENDPOINT}/${PRISMA_SERVICE_NAME}/${PRISMA_STAGE}'
+      PRISMA_SERVICE_NAME: ${PRISMA_SERVICE_NAME}
+      PRISMA_STAGE: ${PRISMA_STAGE}
+      PRISMA_PORT: ${PRISMA_PORT}
       PRISMA_SECRET: '${PRISMA_SECRET}'
       APOLLO_PORT: '${APOLLO_PORT}'
       JWT_SECRET: '${JWT_SECRET}'
