chore: updates gitignore and schmea.js

--- a/.gitignore
+++ b/.gitignore
@@ -86,3 +86,6 @@ node_modules/@types/aws-lambda/package.json
 # ignore saved seed data
 seeded_users.json
 seeded_resume_reviews.json
+
+# ignores previous schema
+/_formerConfiguration
