feat: adds dev scripts and babel config to docker image

--- a/apollo/Dockerfile
+++ b/apollo/Dockerfile
@@ -3,7 +3,8 @@ FROM node:13.10.1-alpine as deps
 WORKDIR /app
 COPY package.json  ./
 
-RUN npm install --silent
+RUN npm install && \
+  npm cache clean --force
 
 FROM node:13.10.1-alpine
 WORKDIR /app
@@ -11,6 +12,8 @@ WORKDIR /app
 # COPY  /app/node_modules ./node_modules/
 COPY --from=deps /app/node_modules ./node_modules/
 COPY ./src ./
+COPY .babelrc ./
+COPY package.json ./
 
 CMD ["NODE", "index.js"]
 EXPOSE 5500
