--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,6 @@ services:
       context: ./apollo
       dockerfile: Dockerfile
     environment:
-      # NODE_ENV=production
-      # - PRISMA_ENDPOINT:'${PRISMA_ENDPOINT}'
       PRISMA_ENDPOINT: '${PRISMA_ENDPOINT}/${PRISMA_SERVICE_NAME}/${PRISMA_STAGE}'
       PRISMA_SERVICE_NAME: ${PRISMA_SERVICE_NAME}
       PRISMA_STAGE: ${PRISMA_STAGE}
@@ -19,9 +17,7 @@ services:
       - ./apollo/src:/app/src
     ports:
       - '${APOLLO_PORT:-8000}:${APOLLO_PORT:-8000}'
-    # command: sh -c "npm install -g nodemon && nodemon src/index.js"
-    command: sh -c "npm run development"
-    # command: sh -c "npm install -g nodemon nodemon --exec babel-node src/index.js"
+    command: sh -c "npm run ${NODE_ENV}"
   prisma:
     image: prismagraphql/prisma:1.34.10
     restart: always
