--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.19.0",
-    "prettier": "^2.0.2",
+    "prettier": "^2.0.4",
     "prisma": "^1.34.10"
   },
   "scripts": {
@@ -17,5 +17,8 @@
     "deploy": "prisma deploy",
     "reseed": "prisma delete && prisma generate && prisma deploy"
   },
-  "dependencies": {}
+  "dependencies": {
+    "apollo-boost": "^0.4.7",
+    "jest": "^25.3.0"
+  }
 }
