--- a/apollo/package.json
+++ b/apollo/package.json
@@ -12,6 +12,10 @@
     "save_seeded_users": "env-cmd -f ../config/development.env node prisma/seeds/02_save_seeded_users.js",
     "seed_reviews": "env-cmd -f ../config/development.env node prisma/seeds/03_seed_reviews.js"
   },
+  "jest": {
+    "globalSetup": "./src/__tests__/config/globalSetup.js",
+    "globalTeardown": "./src/__tests__/config/globalTeardown.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Lambda-School-Labs/quality-hub-core-be.git"
