--- a/apollo/package.json
+++ b/apollo/package.json
@@ -4,7 +4,7 @@
   "description": "🚫 Note: All lines that start with 🚫 are instructions and should be deleted before this is posted to your portfolio. This is intended to be a guideline. Feel free to add your own flare to it.",
   "main": "index.js",
   "scripts": {
-    "test": "jest --watch",
+    "test": "env-cmd -f ../configuration/test.env jest --runInBand",
     "server": "nodemon src/index.js",
     "start": "node src/index.js",
     "development": "nodemon --exec babel-node src/index.js",
