--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       - ./apollo/src:/app/src
     ports:
       - '${APOLLO_PORT:-8000}:${APOLLO_PORT:-8000}'
-    command: sh -c "npm run ${NODE_ENV}"
+    command: sh -c "npm run ${NPM_COMMAND}"
   prisma:
     image: prismagraphql/prisma:1.34.10
     restart: always
