--- a/apollo/package.json
+++ b/apollo/package.json
@@ -4,7 +4,7 @@
   "description": "🚫 Note: All lines that start with 🚫 are instructions and should be deleted before this is posted to your portfolio. This is intended to be a guideline. Feel free to add your own flare to it.",
   "main": "index.js",
   "scripts": {
-    "test": "env-cmd -f ../configuration/test.env jest --runInBand",
+    "test": "env-cmd -f ../configuration/test.env jest --runInBand --watchAll",
     "server": "nodemon src/index.js",
     "start": "node src/index.js",
     "development": "nodemon --exec babel-node src/index.js",
@@ -28,6 +28,7 @@
   },
   "homepage": "https://github.com/Lambda-School-Labs/quality-hub-core-be#readme",
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.9.0",
     "jest": "^25.2.4",
     "nodemon": "^2.0.2",
     "supertest": "^4.0.2"
@@ -36,6 +37,7 @@
     "@babel/core": "^7.9.0",
     "@babel/node": "^7.8.7",
     "@babel/preset-env": "^7.9.0",
+    "@babel/runtime": "^7.9.2",
     "apollo-server": "^2.11.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
