--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.19.0",
     "prettier": "^2.0.4",
     "prisma": "^1.34.10"
@@ -18,7 +18,6 @@
     "reseed": "prisma delete && prisma generate && prisma deploy"
   },
   "dependencies": {
-    "apollo-boost": "^0.4.7",
-    "jest": "^25.3.0"
+    "apollo-boost": "^0.4.7"
   }
 }
