--- a/prisma/prisma.yml
+++ b/prisma/prisma.yml
@@ -11,6 +11,6 @@ generate:
   - generator: javascript-client
     output: ../apollo/src/generated/prisma-client
   - generator: graphql-schema
-    output: ../apollo/schema//prisma.graphql
+    output: ../apollo/schema/prisma.graphql
 # seed:
 #   run: node ./seeds/01_seed_users.js
