feat: updates npm scrips

--- a/package.json
+++ b/package.json
@@ -12,10 +12,18 @@
     "prisma": "^1.34.10"
   },
   "scripts": {
-    "start": "docker-compose up --build",
-    "generate": "prisma generate",
-    "deploy": "prisma deploy",
-    "reseed": "prisma delete && prisma generate && prisma deploy"
+    "beforeRun": "docker-compose stop",
+    "env:dev": "cd utils && python3 env_script.py ../configuration/development.env",
+    "env:test": "cd utils && python3 env_script.py ../configuration/test.env && cd ..",
+    "dev:docker:build": "npm run env:dev && docker-compose up --build",
+    "dev:docker": "npm run beforeRun && npm run env:dev && docker-compose up",
+    "dev:local": "npm run beforeRun && npm run env:dev && docker-compose up -d prisma postgres &&  npm run apollo:dev",
+    "apollo:dev": "cd apollo && npm run development:local",
+    "apollo:test": "cd apollo && npm run test:local",
+    "test:docker:build": "npm run beforeRun && npm run env:test && docker-compose up --build",
+    "test:docker": "npm run beforeRun && npm run env:test && docker-compose up",
+    "test:local": "npm run beforeRun && npm run env:test && docker-compose up -d postgres prisma && npm run apollo:test"
+  },
   },
   "dependencies": {
     "apollo-boost": "^0.4.7"
