--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "devDependencies": {
     "babel-eslint": "^10.1.0",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.1.0",
-    "eslint-config-prettier": "^6.10.1",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.3",
-    "eslint-plugin-react": "^7.19.0",
-    "prettier": "^2.0.4",
+    "eslint": "^7.5.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.20.3",
+    "prettier": "^2.0.5",
     "prisma": "^1.34.10"
   },
   "scripts": {
@@ -25,6 +25,7 @@
     "test:local": "npm run beforeRun && npm run env:test && docker-compose up -d postgres prisma && npm run apollo:test"
   },
   "dependencies": {
-    "apollo-boost": "^0.4.7"
-  }
+    "apollo-boost": "^0.4.9"
+  },
+  "license": "MIT"
 }
