--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
   apollo:
     build:
-      context: ./apollo
+      context: ./
       dockerfile: Dockerfile
 
     environment:
